--- a/SistemaCancer/frontcancer/package.json
+++ b/SistemaCancer/frontcancer/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.6.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
